--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,17 +7,32 @@ authors = ["Johan Hidding <j.hidding@esciencecenter.nl>"]
 edition = "2018"
 
 [profile.release]
+codegen-units = 1
+lto = true
 opt-level = 3
+strip = true
+arch = "native"
+debug-assertions = false
+
+[profile.dev]
+opt-level = 0  # Controls the --opt-level the compiler builds with
+debug = true   # Controls whether the compiler passes `-g`
+lto = false
+strip = false
 
 [dependencies]
 # ~\~ begin <<lit/index.md|dependencies>>[0]
-rand = "0.7.3"
-rayon = "1.3.0"
+argh = "0.1.7"
+nanorand = "0.7.0"
+rayon = "1.5.3"
 # ~\~ end
 
 [dev-dependencies]
 # ~\~ begin <<lit/index.md|dev-dependencies>>[0]
-quickcheck = "0.9"
-quickcheck_macros = "0.9"
+quickcheck = "1.0.3"
+quickcheck_macros = "1.0.0"
 # ~\~ end
 # ~\~ end
+
+
+
