--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 # ~\~ language=TOML filename=Cargo.toml
-# ~\~ begin <<lit/index.md|Cargo.toml>>[0]
+# ~\~ begin <<lit/index.md|Cargo.toml>>[init]
 [package]
 name = "literatept"
 version = "0.1.0"
@@ -10,14 +10,14 @@ edition = "2018"
 opt-level = 3
 
 [dependencies]
-# ~\~ begin <<lit/index.md|dependencies>>[0]
-rand = "0.7.3"
-rayon = "1.3.0"
+# ~\~ begin <<lit/index.md|dependencies>>[init]
+rand = "0.8.5"
+rayon = "1.5.3"
 # ~\~ end
 
 [dev-dependencies]
-# ~\~ begin <<lit/index.md|dev-dependencies>>[0]
-quickcheck = "0.9"
-quickcheck_macros = "0.9"
+# ~\~ begin <<lit/index.md|dev-dependencies>>[init]
+quickcheck = "1.0.3"
+quickcheck_macros = "1.0.0"
 # ~\~ end
 # ~\~ end
