--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ opt-level = 3
 # ~\~ begin <<lit/index.md|dependencies>>[init]
 rand = "0.8.5"
 rayon = "1.5.3"
+indicatif = { version = "0.16.2", features = ["rayon"] }
+argh = "0.1.7"
 # ~\~ end
 
 [dev-dependencies]
