--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,10 @@ edition = "2018"
 
 [profile.release]
 opt-level = 3
+debug = 0
+strip = "debuginfo"
+# arch = "native"
+# lto = true
 
 [dependencies]
 # ~\~ begin <<lit/index.md|dependencies>>[init]
