--- a/book.toml
+++ b/book.toml
@@ -13,9 +13,18 @@ build-dir = "book"
 
 [output.html]
 mathjax-support = true
+additional-css = ["./mdbook-admonish.css", "./mdbook-entangled.css"]
 
 [output.html.playground]
 runnable = false
+
+[preprocessor.annotate]
+command = "python annotate.py"
+
+[preprocessor.admonish]
+command = "mdbook-admonish"
+assets_version = "3.0.2" # do not edit: managed by `mdbook-admonish install`
+after = ["annotate"]
 
 [preprocessor.bib]
 bibliography = "ref.bib"
