--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,4 @@
-# ~\~ language=TOML filename=Cargo.toml
-# ~\~ begin <<lit/index.md|Cargo.toml>>[0]
+# ~/~ begin <<lit/index.md#Cargo.toml>>[init]
 [package]
 name = "literatept"
 version = "0.2.0"
@@ -12,18 +11,18 @@ debug = 0
 strip = "debuginfo"
 
 [dependencies]
-# ~\~ begin <<lit/index.md|dependencies>>[0]
+# ~/~ begin <<lit/index.md#dependencies>>[init]
 rand = "0.8.5"
-# ~\~ end
-# ~\~ begin <<lit/index.md|dependencies>>[1]
+# ~/~ end
+# ~/~ begin <<lit/index.md#dependencies>>[1]
 rayon = "1.5.3"
 indicatif = { version = "0.16.2", features = ["rayon"] }
 argh = "0.1.7"
-# ~\~ end
+# ~/~ end
 
 [dev-dependencies]
-# ~\~ begin <<lit/index.md|dev-dependencies>>[0]
+# ~/~ begin <<lit/vectors.md#dev-dependencies>>[init]
 quickcheck = "1.0.3"
 quickcheck_macros = "1.0.0"
-# ~\~ end
-# ~\~ end
+# ~/~ end
+# ~/~ end
